# arkcompiler_cangjie_ark_interop

./: .gitattributes  BUILD.gn  OAT.xml  Overview-of-Cangjie's-abilities_zh.md  README.md  README_zh.md  build.md  bundle.json  cangjie-format.toml  cj_compiler.gni  cjc.gni  cjc_toolchain.gni  cjc_wrapper.py  collect_dir_sources.py  generate_cjpm.py  generate_mock.py  multi-product_diff.gni  platform.gni  sdk_config.gni
api/ability/: BUILD.gn
api/ability/ability/: ability.cj  ability_configuration.cj  ability_constant.cj  ability_context.cj  ability_error_manager.cj  ability_error_observer.cj  ability_error_observer_ffi.cj  ability_errorcode.cj  ability_stage.cj  ability_stage_context.cj  action_extension_ability.cj  app_manager.cj  app_recovery.cj  application.cj  application_context.cj  base_ability.cj  callback_utils.cj  callee.cj  caller.cj  configuration.cj  connect_options.cj  context.cj  context_constant.cj  data_uri_utils.cj  element_name.cj  embeddable_uiability.cj  embeddable_uiability_context.cj  embedded_ui_extension_ability.cj  extension_ability.cj  extension_context.cj  hilog.cj  insight_intent_context.cj  insight_intent_executor.cj  parse_json.cj  photo_editor_extension_ability.cj  photo_editor_extension_context.cj  process_information.cj  share_extension_ability.cj  ui_ability.cj  ui_ability_context.cj  (+6 more)
api/ability/ability_delegator_registry/: ability_delegator_registry.cj  ability_monitor.cj  ability_stage_monitor.cj  hilog.cj
api/ability/ability_result/: BUILD.gn
api/ability/connect_options/: BUILD.gn
api/ability/test_runner/: hilog.cj  test_runner.cj
api/background_task_mgr/: BUILD.gn
api/background_task_mgr/src/: background_task_mgr_ffi.cj  backgroung_task_mgr.cj  delay_suspend_info.cj
api/bluetooth/: BUILD.gn
api/bluetooth/a2dp/: a2dp.cj
api/bluetooth/access/: access.cj  callback.cj  native.cj
api/bluetooth/baseProfile/: base_profile.cj
api/bluetooth/base_profile/: BUILD.gn  base_profile.cj
api/bluetooth/ble/: BUILD.gn  ble.cj  gatt_client_device.cj  gatt_server.cj  gatt_util.cj  native.cj  util.cj
api/bluetooth/common_util/: util.cj
api/bluetooth/connection/: BUILD.gn  callback.cj  connection.cj  native.cj  util.cj
api/bluetooth/constant/: BUILD.gn  constant.cj
api/bluetooth/error_code/: error_message.cj
api/bluetooth/hfp/: hands_free_audio_gateway_profile.cj
api/bluetooth/hid/: hid_host_profile.cj
api/bluetooth/socket/: socket.cj
api/bundle_manager/: BUILD.gn
api/bundle_manager/common/: BUILD.gn
api/bundle_manager/src/: bundle_manager.cj  cj_bundle_enum.cj  cj_bundle_utils.cj  default_app_manager.cj
api/common_event_manager/: BUILD.gn
api/common_event_manager/src/: common_event_manager.cj  common_event_manager_errors.cj  common_event_manager_ffi.cj  common_event_subscribe_info.cj  common_event_subscriber.cj  publish_data.cj  support.cj  utils.cj
api/contacts/: BUILD.gn
api/contacts/src/: contact.cj  contact_api.cj  contact_attributes.cj  contact_ffi.cj  email.cj  event.cj  group.cj  holder.cj  im_address.cj  name.cj  organization.cj  phone_number.cj  postal_address.cj  relation.cj  sip_address.cj  utils.cj
api/crypto/: BUILD.gn
api/crypto/src/: asy_key_generator.cj  asy_key_generator_by_spec.cj  cipher.cj  cj_crypto_common.cj  cj_crypto_enum.cj  cj_crypto_interface.cj  cj_crypto_native.cj  (+16 more)
api/effect_kit/: BUILD.gn
api/file_fs/: BUILD.gn
api/file_grant_permission/: BUILD.gn
api/i18n/: BUILD.gn
api/image/: BUILD.gn
api/multimedia_media/: BUILD.gn
api/relational_store/: BUILD.gn
api/resource_manager/: BUILD.gn
api/rpc/: BUILD.gn
api/security_certificate_framework/: BUILD.gn
api/ui_test/: BUILD.gn
api/webview/: BUILD.gn
api/wifi_manager/: BUILD.gn
kit/: BUILD.gn
kit/AVSessionKit/: index.cj
kit/AbilityKit/: index.cj
kit/AccessibilityKit/: index.cj
kit/AdsKit/: index.cj
kit/ArkData/: index.cj
kit/ArkGraphics2D/: index.cj
kit/ArkUI/: index.cj
kit/ArkWeb/: index.cj
kit/AssetStoreKit/: index.cj
kit/AudioKit/: index.cj
kit/BackgroundTasksKit/: index.cj
kit/BasicServicesKit/: index.cj
kit/CalendarKit/: index.cj
kit/CameraKit/: index.cj
kit/ConnectivityKit/: index.cj  nfc.cj  security_element.cj
kit/ContactsKit/: index.cj
kit/CoreFileKit/: index.cj
kit/CryptoArchitectureKit/: index.cj
kit/DeviceCertificateKit/: index.cj
kit/DistributedServiceKit/: index.cj
kit/FormKit/: index.cj
kit/HybridUIKit/: index.cj
kit/IMEKit/: index.cj
kit/IPCKit/: index.cj
kit/ImageKit/: index.cj
kit/InputKit/: index.cj
kit/LocalizationKit/: index.cj
kit/LocationKit/: index.cj
kit/MediaLibraryKit/: index.cj
kit/NetworkKit/: index.cj
kit/NotificationKit/: index.cj
kit/PerformanceAnalysisKit/: index.cj
kit/SensorServiceKit/: index.cj
kit/TelephonyKit/: index.cj
kit/TestKit/: index.cj
kit/UIKit/: index.cj
kit/UniversalKeystoreKit/: index.cj
kit/UserAuthenticationKit/: index.cj
mocks/: BUILD.gn  abilitykit_native.sym  appkit_delegator.sym  appkit_native.sym  ark_interop_helper_ffi.sym  asset_sdk.sym  cj_ability_access_ctrl_ffi.sym  cj_ability_context_native.sym  cj_ability_ffi.cpp  cj_ability_ffi.sym  cj_abilitykit_native_ffi.sym  cj_accessibility_ffi.sym  cj_advertising_ffi.sym  cj_appAccount_ffi.sym  cj_app_manager_ffi.sym  cj_app_recovery_ffi.sym  cj_audiohaptic_ffi.sym  cj_avplayer_ffi.sym  cj_avscreen_capture_ffi.sym  cj_avtranscoder_ffi.sym  cj_background_task_mgr_ffi.sym  cj_battery_info_ffi.sym  cj_bind_ffi.sym  cj_bluetooth_a2dp_ffi.sym  cj_bluetooth_access_ffi.sym  cj_bluetooth_ble_ffi.sym  cj_bluetooth_connection_ffi.sym  cj_bluetooth_hfp_ffi.sym  cj_bluetooth_hid_ffi.sym  cj_bluetooth_socket_ffi.sym  cj_bundle_manager_ffi.sym  cj_calendar_manager_ffi.sym  cj_camera_ffi.sym  cj_camera_picker_ffi.sym  cj_cellular_data_ffi.sym  cj_cert_ffi.sym  cj_cert_manager_ffi.sym  cj_color_manager_ffi.sym  cj_common_event_manager_ffi.sym  cj_context_ffi.sym  (+87 more)
sdk/: BUILD.gn  copy_files.py  sdk_cangjie.gni
sdk/ark_interop_loader/: BUILD.gn  ark_interop_loader.cpp  cj_envsetup.cpp  cj_envsetup.h
sdk/cjo/: cjo_processor.py
sdk/lib/: BUILD.gn
(+6879 files in other folders)
