# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("sdk_config.gni")

group("cangjie_systemapi_packages") {
  deps = []
  foreach(item, cangjie_ohos_libs) {
    # if enable not defined, default true
    if (!(defined(item.enable) && item.enable == false)) {
      deps += [ "${item.label}" ]
    }
  }
  foreach(item, cangjie_kits) {
    deps += ["${item.label}"]
  }
}
